--- a/bibtex/master_reference.bib
+++ b/bibtex/master_reference.bib
@@ -193,6 +193,33 @@
   organization={IEEE}
 }
 
+@inproceedings{saha2019stgm,
+  title={STGM: Spatio-temporal {GPU} management for real-time tasks},
+  author={Saha, Sujan Kumar and Xiang, Yecheng and Kim, Hyoseung},
+  booktitle={2019 IEEE 25th International Conference on Embedded and Real-Time Computing Systems and Applications (RTCSA)},
+  pages={1--6},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{xiang2019pipelined,
+  title={Pipelined data-parallel {CPU/GPU} scheduling for multi-DNN real-time inference},
+  author={Xiang, Yecheng and Kim, Hyoseung},
+  booktitle={2019 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={392--405},
+  year={2019},
+  organization={IEEE}
+}
+
+@inproceedings{wang2021balancing,
+  title={Balancing energy efficiency and real-time performance in {GPU} scheduling},
+  author={Wang, Yidi and Karimi, Mohsen and Xiang, Yecheng and Kim, Hyoseung},
+  booktitle={2021 IEEE Real-Time Systems Symposium (RTSS)},
+  pages={110--122},
+  year={2021},
+  organization={IEEE}
+}
+
 @inproceedings{blass2021ros,
   title={A {ROS} 2 Response-Time Analysis Exploiting Starvation Freedom and Execution-Time Variance},
   author={Bla{\ss}, Tobias and Casini, Daniel and Bozhko, Sergey and Brandenburg, Bj{\"o}rn B},
