--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/case_study.tex
@@ -50,7 +50,7 @@
     \begin{itemize}
         \item 時間駆動型システムとイベント駆動型システムで, 同様の予算の効果が観察できる
         \item 最悪サンプリングレイテンシにより, 時間駆動型セットアップは, イベント駆動型セットアップよりも $80 \mathrm{~ms}$ サンプリング周期が高くなる
-        \item この場合, イベント駆動セットアップが明らかに望ましいと判断できる
+        \item この場合, イベント駆動セットアップが自明に望ましいと判断できる
     \end{itemize}
 \end{frame}
 
