--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/response_time_analysis_for_processing_chains.tex
@@ -94,7 +94,7 @@
 
 \begin{frame}{コールバックの最悪応答時間}
     \begin{definition}[コールバック $c_{i}$ の最悪応答時間 $R_{i}$]
-        すべてインスタンスの中で, 終了時間とリリース時間の間の最大の差
+        全てインスタンスの中で, 終了時間とリリース時間の間の最大の差
     \end{definition}
 \end{frame}
 
