--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/experiments.tex
@@ -162,7 +162,7 @@
     \fitimage{
         \begin{itemize}
             \item ケーススタディの簡単な説明を表に示す
-            \item これらは Choiら~\cite{choi2021picas}が現実的な自律走行システムから開発したサブチェーンを引用
+            \item これらは Choiら~\cite{choi2021picas}が現実的な自動運転システムから開発したサブチェーンを引用
         \end{itemize}
     }{exp_case_study_desc.png}
 \end{frame}
