--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/background.tex
@@ -3,186 +3,189 @@
 \section{BACKGROUND}
 \label{sec: background}
 
-%%%% wait kobayu
-% \subsection{ROS}
-% \label{ssec: ros}
+\subsection{ROS}
+\label{ssec: ros}
 
-% \begin{frame}{セクションサマリ}
-%     \begin{itembox}[l]{\textbf{目的}}
-%         このセクションでは, 本稿が支えている 3 つの柱について必要な背景を紹介する
-%     \end{itembox}
-%     \begin{itembox}[l]{\textbf{流れ}}
+\begin{frame}{セクションサマリ}
+    \begin{itembox}[l]{\textbf{目的}}
+        このセクションでは, 本稿が支えている 3 つの柱について必要な背景を紹介する
+    \end{itembox}
+    \begin{itembox}[l]{\textbf{流れ}}
+        \begin{itemize}
+            \item 最初に, ROS の構造とその実行モデルを示す
+            \item 次に, プロセスのリソース消費を分離するための OS レベルのメカニズムであるリソース予約を確認する
+            \item 最後に, 応答時間分析のための構成パフォーマンス分析アプローチを確認する
+        \end{itemize}
+    \end{itembox}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item ROS は, モジュール性と構成可能性に重点を置いている
+        \item したがって, アプリケーションの論理構造と, この構造のホスト, プロセッサ, およびスレッドへのマッピングとを厳密に分離することが推奨される
+        \item 前者はパッケージ開発者によって定義されるが, 後者は完全にシステムインテグレーター次第である
+        \item このようにして, 特定のロボットの展開特性に合わせてソフトウェアモジュールを調整する機能を失うことなく, ターゲットプラットフォームとは独立してソフトウェアモジュールを開発できる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item 論理的な観点から言えば, ROS アプリケーションは, 自己完結型の動作の最小単位であるノードで構成されている
+        \item これらのノードは, publish/subscribe パラダイムを使用して通信する
+        \item ノードは, トピックにsubscribeしている全てのノードにメッセージをブロードキャストするトピックでメッセージをpublishする
+        \item ノードは, コールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
+        \item これらのコールバックはメッセージ自体をpublishする可能性があるため, 複雑な動作をトピックとコールバックのネットワークとして実装できる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item  ROS では, 継続渡しスタイルを使用するサービスメカニズムによって, コールバックがリモートプロシージャコールを呼び出すこともできる
+        \item 具体的には, コールバックは, サービスコールバックへの非ブロッキングサービス要求を開始し, 応答が利用可能になったときに呼び出される 3 番目のクライアントコールバックを指定できる
+        \item ROS を使用すると, さまざまなプログラミング言語で記述されたノードを作成し, さまざまな通信バックエンドを使用してシームレスに作成できる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \fitimage{
+        ROS の実装は複数の抽象化レイヤに分割される
+    }{ros}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item サポートされている各プログラミング言語には, 言語固有の API を ROS アプリケーションモデルに提供するクライアントライブラリが必要である
+        \item ROS プロジェクトは C と Python を公式にサポートしており, コミュニティが提供する他の多くの言語もサポートしている
+        \item 表面下では, これらのライブラリは $r c l$ ライブラリによって提供される共通のシステムモデルを使用する
+        \item これにより, 言語間で一貫した動作が保証され, コードの重複が削減される
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item この統一された実装にもかかわらず, ROS システムの一部は言語間で異なることが許されている
+        \item 特に, クライアントライブラリには実行モデルの実装に多くの自由があり, コールバックグラフを各言語で最も自然な方法で表現できる
+        \item 例えば, コルーチンをサポートする言語では, コルーチンをコールバックではなくイベントハンドラーとして使用できる場合がある
+        \item したがって, 本論文の焦点を $\mathrm{C}++$ インターフェイスに限定する
+        \item $\mathrm{C}++$ インターフェイスは, タイムクリティカルなコンポーネントの選択肢として最も可能性が高いと考えられる
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item ノード間通信の場合, ROS は, リアルタイムシステムでのデータ配信の業界標準である Data Distribution Service (DDS) を使用する
+        \item DDS は, サービス品質 (QoS) ポリシーの豊富なセットを使用して, 目の前のニーズに適応できるネットワーク透過的なpublish/subscribe メカニズムを指定する
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item ROS は, DDS 標準のさまざまな独立した実装 (eProsima による FastRTPS [2], RTI による Connext [6], および Adlink による Vortex OpenSplice [7]) で動作し, それぞれが異なる API を使用する
+        \item したがって, $r c l$ クライアントライブラリは, DDS に依存しない API を $r c l$ 層に提供する共通の rmw (ROS MiddleWare) インターフェイスを介して DDS サブシステムにアクセスする
+        \item サポートされている各 DDS 実装には, 共通の $r m w$ インターフェイスとベンダー固有の DDS API の間で変換を行う専用の rmw 実装が必要である
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item ROS アプリケーションをデプロイするには, 個々のノードをホストに配布してから, オペレーティングシステムプロセスにマッピングする必要がある
+        \item ROS は, このマッピングに制限を課しない
+        \item プロセスは, $r c l$ からメッセージを受信し, 対応するコールバックを呼び出すエグゼキュータを実行することにより, ROS 実行モデルを実装する
+        \item ROS には 2 つの組み込みエグゼキュータが用意されている
+        \item 単一スレッドでコールバックを実行するシーケンシャルエグゼキュータと, 保留中のコールバックの処理を複数のスレッドに分散する並列エグゼキュータである
+        \item さらに, ROS は, 複数のユーザ定義のエグゼキュータの任意の複雑なセットアップをサポートする
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item リアルタイムの観点から, executor がカスタムスケジューリングポリシーを実装することに注意することが重要である
+        \item この問題については, セクション 3 で詳しく説明する
+        \item さらに, 各 ROS エグゼキュータのスレッドが OS によってどのようにスケジュールされるかは, アプリケーションの全体的なタイミング動作に大きな影響を与える
+        \item 予測可能なスケジューリングを確保するために, エグゼキュータスレッドを予約サーバに制限することができる
+    \end{itemize}
+\end{frame}
+
+
+% \subsection{Resource Reservations}
+% \label{ssec: resource reservations}
+
+% \begin{frame}{リソースの予約}
+%     \begin{itemize}
+%         \item ROS スレッドの予測可能なサービスを確保するためのメカニズムはリソースの予約
+%         \item リソースの予約は通常, 予約サーバによって実装される
+%               \begin{block}{リソースの予約}
+%                   予約サーバ $r_{i}$ は予算 $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
+%               \end{block}
+%     \end{itemize}
+% \end{frame}
+
+% \begin{frame}{リソースの予約に関する仮定}
+%     \begin{itemize}
+%         \item 本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
+%               \begin{enumerate}
+%                   \item 各予約には暗黙のデッドラインがある
+%                   \item $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
+%                   \item 予算枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
+%               \end{enumerate}
+%         \item ある長さの区間において予約が提供するサービスの最小量は, 既知の供給境界関数 $sbf()$ \cite{shin2003periodic, lipari2003resource} で得られる
+%     \end{itemize}
+% \end{frame}
+
+% \forme{
+%     \begin{frame}{リソースの予約の実装方法}
 %         \begin{itemize}
-%             \item 最初に, ROS の構造とその実行モデルを示す
-%             \item 次に, プロセスのリソース消費を分離するための OS レベルのメカニズムであるリソース予約を確認する
-%             \item 最後に, 応答時間分析のための構成パフォーマンス分析アプローチを確認する
+%             \item Linux システムでは, リソースの予約は SCHED\_DEADLINE~\cite{lelli2016deadline} を通じて利用できる
+%             \item さらに, 実用的な関連性の特殊なケースとして, SCHED\_FIFO スケジューリングクラスの最高優先度の専用コアで実行されているスレッドは, 供給境界関数 $\operatorname{sbf}(\Delta)=\Delta$ を使用して予約で実行されていると見なすことができる
 %         \end{itemize}
-%     \end{itembox}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ROS は, モジュール性と構成可能性に重点を置いている
-%         \item したがって, アプリケーションの論理構造と, この構造のホスト, プロセッサ, およびスレッドへのマッピングとを厳密に分離することが推奨される
-%         \item 前者はパッケージ開発者によって定義されるが, 後者は完全にシステムインテグレーター次第である
-%         \item このようにして, 特定のロボットの展開特性に合わせてソフトウェアモジュールを調整する機能を失うことなく, ターゲットプラットフォームとは独立してソフトウェアモジュールを開発できる
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item 論理的な観点から言えば, ROS アプリケーションは, 自己完結型の動作の最小単位であるノードで構成されている
-%         \item これらのノードは, publish/subscribe パラダイムを使用して通信する
-%         \item ノードは, トピックにsubscribeしている全てのノードにメッセージをブロードキャストするトピックでメッセージをpublishする
-%         \item ノードは, コールバックをアクティブにして各メッセージを処理することにより, publish メッセージに反応する
-%         \item これらのコールバックはメッセージ自体をpublishする可能性があるため, 複雑な動作をトピックとコールバックのネットワークとして実装できる
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item  ROS では, 継続渡しスタイルを使用するサービスメカニズムによって, コールバックがリモートプロシージャコールを呼び出すこともできる
-%         \item 具体的には, コールバックは, サービスコールバックへの非ブロッキングサービス要求を開始し, 応答が利用可能になったときに呼び出される 3 番目のクライアントコールバックを指定できる
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ROS を使用すると, さまざまなプログラミング言語で記述されたノードを作成し, さまざまな通信バックエンドを使用してシームレスに作成できる
-%         \item そのため, ROS の実装は複数の抽象化レイヤに分割され, 図 1 に視覚化されている
-%         \item サポートされている各プログラミング言語には, 言語固有の API を ROS アプリケーションモデルに提供するクライアントライブラリが必要である
-%         \item ROS プロジェクトは C と Python を公式にサポートしており, コミュニティが提供する他の多くの言語もサポートしている
-%         \item 表面下では, これらのライブラリは $r c l$ ライブラリによって提供される共通のシステムモデルを使用する
-%         \item これにより, 言語間で一貫した動作が保証され, コードの重複が削減される
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item この統一された実装にもかかわらず, ROS システムの一部は言語間で異なることが許されている
-%         \item 特に, クライアントライブラリには実行モデルの実装に多くの自由があり, コールバックグラフを各言語で最も自然な方法で表現できる
-%         \item 例えば, コルーチンをサポートする言語では, コルーチンをコールバックではなくイベントハンドラーとして使用できる場合がある
-%         \item したがって, 本論文の焦点を $\mathrm{C}++$ インターフェイスに限定する
-%         \item $\mathrm{C}++$ インターフェイスは, タイムクリティカルなコンポーネントの選択肢として最も可能性が高いと考えられる
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ノード間通信の場合, ROS は, リアルタイムシステムでのデータ配信の業界標準である Data Distribution Service [39] (DDS) を使用する
-%         \item DDS は, サービス品質 (QoS) ポリシーの豊富なセットを使用して, 目の前のニーズに適応できるネットワーク透過的なpublish/subscribe メカニズムを指定する
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ROS は, DDS 標準のさまざまな独立した実装 (現在, eProsima による FastRTPS [2], RTI による Connext [6], および Adlink による Vortex OpenSplice [7]) で動作し, それぞれが異なる API を使用する
-%         \item したがって, $r c l$ クライアントライブラリは, DDS に依存しない API を $r c l$ 層に提供する共通の rmw (ROS MiddleWare) インターフェイスを介して DDS サブシステムにアクセスする
-%         \item サポートされている各 DDS 実装には, 共通の $r m w$ インターフェイスとベンダー固有の DDS API の間で変換を行う専用の rmw 実装が必要である
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item ROS アプリケーションをデプロイするには, 個々のノードをホストに配布してから, オペレーティングシステムプロセスにマッピングする必要がある
-%         \item ROS は, このマッピングに制限を課しない
-%         \item プロセスは, $r c l$ からメッセージを受信し, 対応するコールバックを呼び出すエグゼキュータを実行することにより, ROS 実行モデルを実装する
-%         \item ROS には 2 つの組み込みエグゼキュータが用意されている
-%         \item 単一スレッドでコールバックを実行するシーケンシャルエグゼキュータと, 保留中のコールバックの処理を複数のスレッドに分散する並列エグゼキュータである
-%         \item さらに, ROS は, 複数のユーザ定義のエグゼキュータの任意の複雑なセットアップをサポートする
-%     \end{itemize}
-% \end{frame}
-
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item リアルタイムの観点から, executor がカスタムスケジューリングポリシーを実装することに注意することが重要である
-%         \item この問題については, セクション 3 で詳しく説明する
-%         \item さらに, 各 ROS エグゼキュータのスレッドが OS によってどのようにスケジュールされるかは, アプリケーションの全体的なタイミング動作に大きな影響を与える
-%         \item 予測可能なスケジューリングを確保するために, エグゼキュータスレッドを予約サーバに制限することができる
-%         \item 次に, リソース予約の重要な側面を簡単に確認する
-%     \end{itemize}
-% \end{frame}
+%     \end{frame}
+% }
 
 
-\subsection{Resource Reservations}
-\label{ssec: resource reservations}
+% \forme{
+%     \subsection{Compositional Performance Analysis}
+%     \label{ssec: compositional performance analysis}
 
-\begin{frame}{リソースの予約}
-    \begin{itemize}
-        \item ROS スレッドの予測可能なサービスを確保するためのメカニズムはリソースの予約
-        \item リソースの予約は通常, 予約サーバによって実装される
-        \begin{block}{リソースの予約}
-            予約サーバ $r_{i}$ は予算 $Q_{i}$ と周期 $P_{i}$ によって特徴付けられ, そのクライアントスレッドが各周期に $Q_{i}$ 単位の実行時間を受け取ることを保証する
-        \end{block}
-    \end{itemize}
-\end{frame}
+%     \begin{frame}{}
+%         \begin{itemize}
+%             \item 構成パフォーマンス分析 (CPA) は, ヘテロジニアスシステムと分散システムのパフォーマンスを分析的に評価するアプローチである [27]
+%             \item CPA は, システムをリソースのネットワークとしてモデル化し, ワークロードを依存関係のあるタスクとしてモデル化する
+%             \item リソースは, タスクによって消費される処理時間を提供する
+%         \end{itemize}
+%     \end{frame}
 
-\begin{frame}{リソースの予約に関する仮定}
-    \begin{itemize}
-        \item 本論文では, 予約サーバーが周期的リソースモデル~\cite{shin2003periodic}に準拠している, すなわち, 以下を仮定する
-              \begin{enumerate}
-                  \item 各予約には暗黙のデッドラインがある
-                  \item $r_i$がワークロードを持つときはいつでも, 予約アルゴリズムが$P_i$時間単位ごとに少なくとも$Q_i$単位のサービスを保証する
-                  \item 予算枯渇と他の予約のレイテンシによる, ある予約で実行中のプロセスが受ける有限の最大リリースレイテンシが存在する
-              \end{enumerate}
-        \item ある長さの区間において予約が提供するサービスの最小量は, 既知の供給境界関数 $sbf()$ \cite{shin2003periodic, lipari2003resource} で得られる
-    \end{itemize}
-\end{frame}
+%     \begin{frame}{}
+%         \begin{itemize}
+%             \item 依存関係のあるタスクは直接非巡回グラフとして編成され, グラフ内のパスは処理チェーンとして示される
+%             \item 同じリソースを共有するタスクは, リソース固有のスケジューリングポリシーに従ってスケジュールされる
+%             \item チェーンのソースタスクは, 外部から提供されたイベント到着曲線 $[27,30,62] \eta^{e}(\Delta)$ に従ってトリガされる
+%             \item これは, 任意の時間枠 $[t, t+\Delta)$ に到着できるイベント数の上界を定義する
+%         \end{itemize}
+%     \end{frame}
 
-\forme{
-    \begin{frame}{リソースの予約の実装方法}
-        \begin{itemize}
-            \item Linux システムでは, リソースの予約は SCHED\_DEADLINE~\cite{lelli2016deadline} を通じて利用できる
-            \item さらに, 実用的な関連性の特殊なケースとして, SCHED\_FIFO スケジューリングクラスの最高優先度の専用コアで実行されているスレッドは, 供給境界関数 $\operatorname{sbf}(\Delta)=\Delta$ を使用して予約で実行されていると見なすことができる
-        \end{itemize}
-    \end{frame}
-}
+%     \begin{frame}{}
+%         \begin{itemize}
+%             \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
+%             \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
+%             \item 非ソースタスクは, 導出されたアクティベーションカーブに従ってトリガされる
+%             \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
+%         \end{itemize}
+%     \end{frame}
 
+%     \begin{frame}{}
+%         \begin{itemize}
+%             \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
+%             \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
+%             \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
+%             \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の最悪応答時間の合計で制限する
+%             \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
+%         \end{itemize}
+%     \end{frame}
 
-\forme{
-    \subsection{Compositional Performance Analysis}
-    \label{ssec: compositional performance analysis}
-
-    \begin{frame}{}
-        \begin{itemize}
-            \item 構成パフォーマンス分析 (CPA) は, ヘテロジニアスシステムと分散システムのパフォーマンスを分析的に評価するアプローチである [27]
-            \item CPA は, システムをリソースのネットワークとしてモデル化し, ワークロードを依存関係のあるタスクとしてモデル化する
-            \item リソースは, タスクによって消費される処理時間を提供する
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}{}
-        \begin{itemize}
-            \item 依存関係のあるタスクは直接非巡回グラフとして編成され, グラフ内のパスは処理チェーンとして示される
-            \item 同じリソースを共有するタスクは, リソース固有のスケジューリングポリシーに従ってスケジュールされる
-            \item チェーンのソースタスクは, 外部から提供されたイベント到着曲線 $[27,30,62] \eta^{e}(\Delta)$ に従ってトリガされる
-            \item これは, 任意の時間枠 $[t, t+\Delta)$ に到着できるイベント数の上界を定義する
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}{}
-        \begin{itemize}
-            \item イベント到着曲線は, 周期的およびイベント駆動型 (割り込み駆動型など) の両方のアクティベーションをモデル化するのに十分一般的である [47]
-            \item 例えば, タスク $T_{x}$ が定期的にトリガされる場合, その到着曲線は $\eta_{x}^{e}(\Delta)=\left[\frac{\Delta}{\operatorname{period}(x)}\right]$ として表すことができる
-            \item 非ソースタスクは, 導出されたアクティベーションカーブに従ってトリガされる
-            \item アクティベーション曲線は, 先行タスクによるアクティベーションレイテンシを反映し, 応答時間に依存するリリースジッターを考慮して, 到着曲線から取得される
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}{}
-        \begin{itemize}
-            \item しかし, 応答時間はリリースジッターにも依存するため, 周期的な依存関係が生じる
-            \item この問題を解決するために, 分析はゼロの初期ジッターで開始し, 収束が達成されるまで繰り返し応答時間分析を適用し, 全てのジッター境界を更新する [42,63]
-            \item 収束は, 応答時間とジッタの間の単調な依存性によって (過負荷のないシステムの場合) 保証される (ジッタが大きいほど, 応答時間は長くなり, その逆も同様である)
-            \item 基本的な CPA アプローチでは, チェーンのエンドツーエンドレイテンシを, 各タスクの個々の最悪応答時間の合計で制限する
-            \item その後, [54, 56] のように, 解析精度を向上させる拡張機能が設計された
-        \end{itemize}
-    \end{frame}
-
-    \begin{frame}{}
-        \begin{itemize}
-            \item ROS は, カスタムスケジューリングポリシーを使用して独特な方法でコールバックをディスパッチするエグゼキュータを提供するため, 既存の CPA の文献とツールは ROS に完全に一致するものではない
-            \item しかし, CPA から自由にインスピレーションを得て, 次に紹介する ROS の特異性を反映した, 同様に柔軟なタイミングモデルを取得する
-        \end{itemize}
-    \end{frame}
-}
+%     \begin{frame}{}
+%         \begin{itemize}
+%             \item ROS は, カスタムスケジューリングポリシーを使用して独特な方法でコールバックをディスパッチするエグゼキュータを提供するため, 既存の CPA の文献とツールは ROS に完全に一致するものではない
+%             \item しかし, CPA から自由にインスピレーションを得て, 次に紹介する ROS の特異性を反映した, 同様に柔軟なタイミングモデルを取得する
+%         \end{itemize}
+%     \end{frame}
+% }
