--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/introduction.tex
@@ -5,7 +5,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item ロボットオペレーティングシステム [43] である ROS は, Linux ベースのロボットを設計および開発するための最も一般的なフレームワークの 1 つである 100 を超えるさまざまなロボット設計を強化し, 産業界と学界の両方で何万人もの開発者と研究者によって使用されている [4, 22]
+        \item ロボットオペレーティングシステムである ROS は, Linux ベースのロボットを設計および開発するための最も一般的なフレームワークの 1 つである 100 を超えるさまざまなロボット設計を強化し, 産業界と学界の両方で何万人もの開発者と研究者によって使用されている
         \item しかし, 開発から 10 年以上が経過し, ますます要求の厳しいアプリケーションに直面した結果, ROS コミュニティは, フレームワークが, 後方互換性のある方法で修正できないいくつかの長年にわたる欠点とアーキテクチャ上の制限によって妨げられていることが自明になった
     \end{itemize}
 \end{frame}
@@ -14,7 +14,7 @@
     \begin{itemize}
         \item これが ROS 2 の開発の動機となった
         \item これは ROS の完全なリファクタリングであり, 成功したコンセプトを最新化され改善されたプラットフォームに置きます
-        \item 本論文にとって特に興味深いのは, ROS 2 の主な設計目標は, フレームワークのリアルタイム機能を向上させ, ROS 内でタイムクリティカルな制御パスの実装を可能にすることである [24]
+        \item 本論文にとって特に興味深いのは, ROS 2 の主な設計目標は, フレームワークのリアルタイム機能を向上させ, ROS 内でタイムクリティカルな制御パスの実装を可能にすることである
     \end{itemize}
 \end{frame}
 
@@ -29,7 +29,7 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 適切な例として, $\operatorname{ROS}^{1}$ スケジューリングアプローチ (セクション 3 で詳細に説明) は, エンドツーエンドレイテンシの制限に関する従来の結果のいずれとも一致しない
+        \item 適切な例として, ROS スケジューリングアプローチは, エンドツーエンドレイテンシの制限に関する従来の結果のいずれとも一致しない
         \item したがって, ROS 開発者は, タイミング特性を測定するために, 完全なプロトタイピングと設計の展開に頼らなければならず, 実際に設計空間を調査できる程度が大幅に制限される
     \end{itemize}
 \end{frame}
@@ -65,9 +65,9 @@
 
 \begin{frame}{}
     \begin{itemize}
-        \item 本論文では, ROS 2 "Crystal Clemmys" (2018 年 12 月にリリース) [5] の一時的な動作を調査することにより, このような自動分析ツールの理論的基礎を築こうとする
+        \item 本論文では, ROS 2 "Crystal Clemmys" の一時的な動作を調査することにより, このような自動分析ツールの理論的基礎を築こうとする
         \item Linux の SCHED\_DEADLINE などのリソース予約スケジューラの上で実行される ROS アプリケーションのモデルを提示し, 検証する
         \item このモデルに基づいて, ROS 環境の特殊性と工学的制約を考慮に入れた ROS 処理チェーンのエンドツーエンドの応答時間分析を開発する
-        \item 最後に, 実用的な ROS コンポーネントへの分析の適用可能性を実証するために, ROS ナビゲーションスタックのコアである一般的な move\_base パッケージ [3] に対するアプローチを評価する
+        \item 最後に, 実用的な ROS コンポーネントへの分析の適用可能性を実証するために, ROS ナビゲーションスタックのコアである一般的な move\_base パッケージに対するアプローチを評価する
     \end{itemize}
 \end{frame}
