--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/main.tex
@@ -25,7 +25,7 @@
 
 \maketitle
 
-\summary{1}{0}
+% \summary{1}{0}
 % \input{abstract.tex}
 
 \begin{frame}{Outline}
@@ -33,9 +33,9 @@
     \footnotesize\tableofcontents[hideallsubsections]
 \end{frame}
 
-% \input{introduction.tex} % wait kobayu
-% \input{background.tex}
-% \input{ros_scheduling.tex} % wait kobayu
+\input{introduction.tex} % wait kobayu
+\input{background.tex}
+\input{ros_scheduling.tex} % wait kobayu
 % \input{prior_knowledge.tex}
 % \input{system_model.tex}
 % \input{response_time_analysis_for_processing_chains.tex}
