--- a/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/ros_scheduling.tex
+++ b/paper/2019_ECRTS_Response-Time_Analysis_of_ROS2_Processing_Chains_Under_Reservation-Based_Scheduling/ros_scheduling.tex
@@ -10,65 +10,65 @@
     \end{itembox}
 \end{frame}
 
-%%%% wait kobayu
-% \begin{frame}{コールバックの分類}
-%     \begin{itemize}
-%         \item エグゼキュータはコールバックの以下 4 つの分類を区別する
-%         \item システムレベルのタイマによってトリガされるタイマ, subscribeされたトピックの新しいメッセージによってトリガされるsubscriber, サービス要求によってトリガされるサービス, および応答によってトリガされるクライアントである
-%         \item 完了までコールバックを実行するため, ノンプリエンプティブスケジューラである
-%     \end{itemize}
-% \end{frame}
 
-% \begin{frame}{readySet}
-%     ROS2のエグゼキュータは一般的に研究されているスケジューラとは異なり, 実行可能な全てのタスクを常に考慮しているわけではなく, readySet に基づいて決定する
-%     \begin{block}{readySet}
-%         実行に依存する不規則な間隔で更新される, ready状態の非タイマコールバックのコピー
-%     \end{block}
-% \end{frame}
+\begin{frame}{コールバックの分類}
+    \begin{itemize}
+        \item エグゼキュータはコールバックの以下 4 つの分類を区別する
+        \item システムレベルのタイマによってトリガされるタイマ, subscribeされたトピックの新しいメッセージによってトリガされるsubscriber, サービス要求によってトリガされるサービス, および応答によってトリガされるクライアントである
+        \item 完了までコールバックを実行するため, ノンプリエンプティブスケジューラである
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{アルゴリズム2}
-%     \fullimage{thread_flow}
-% \end{frame}
+\begin{frame}{readySet}
+    ROS2のエグゼキュータは一般的に研究されているスケジューラとは異なり, 実行可能な全てのタスクを常に考慮しているわけではなく, readySet に基づいて決定する
+    \begin{block}{readySet}
+        実行に依存する不規則な間隔で更新される, ready状態の非タイマコールバックのコピー
+    \end{block}
+\end{frame}
 
-% \begin{frame}{エグゼキュータのフロー1}
-%     \begin{itemize}
-%         \item エグゼキュータがアイドル状態の場合, readySet を更新する
-%         \item 最初に, タイマがデッドラインミスしているかどうかを確認する
-%         \item 次に, サブスクリプション, サービス, クライアントについて順に readySet を探索する
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{アルゴリズム2}
+    \fullimage{thread_flow}
+\end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item カテゴリに少なくとも 1 つのreadyコールバックがある場合は常に, 最も優先度の高いコールバックが選択され, 実行されてから, readySet から削除される
-%         \item 最後に, readySet が空で, デッドラインミスしたタイマが残っていない場合, executor はアイドル状態に戻り, 通信レイヤの現在のスナップショットに基づいて readySet を更新する
-%         \item readySet の更新をポーリングポイントと呼び, 2 つのポーリングポイント間の間隔を処理ウィンドウと呼ぶ
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{エグゼキュータのフロー1}
+    \begin{itemize}
+        \item エグゼキュータがアイドル状態の場合, readySet を更新する
+        \item 最初に, タイマの周期が来ているかを確認する
+        \item 次に, サブスクリプション, サービス, クライアントについて順に readySet を探索する
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{コールバックの優先度を決める要因}
-%     \begin{itemize}
-%         \item タイマキューが最初に検査されるため, 優先度が最も高くなり, クライアントキューが最後に検査され, 優先度が最も低くなる
-%         \item キューが考慮される場合, コールバックインスタンスは, エグゼキュータに登録された順序で検査される
-%         \item 全体として, 各コールバックの固有の優先度は, コールバックタイプ・登録順序によって決定される
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{}
+    \begin{itemize}
+        \item カテゴリに少なくとも 1 つのreadyコールバックがある場合は常に, 最も優先度の高いコールバックが選択され, 実行されてから, readySet から削除される
+        \item 最後に, readySet が空で, 周期が来たタイマが残っていない場合, executor はアイドル状態に戻り, 通信レイヤの現在のスナップショットに基づいて readySet を更新する
+        \item readySet の更新をポーリングポイントと呼び, 2 つのポーリングポイント間の間隔を処理ウィンドウと呼ぶ
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item 通常の固定優先度スケジューリングと比較すると, このアルゴリズムにはいくつかの変わった特性がある
-%         \item まず, 処理ウィンドウ中に到着したメッセージは, 残りの全てのコールバックに依存する次のポーリングポイントまで考慮されない
-%         \item これは, 優先度の低いコールバックが現在の処理ウィンドウを引き延ばすことによって, 優先度の高いコールバックを暗黙的にブロックする可能性があるため, 優先度の逆転につながります
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{コールバックの優先度を決める要因}
+    \begin{itemize}
+        \item タイマキューが最初に検査されるため, 優先度が最も高くなり, クライアントキューが最後に検査され, 優先度が最も低くなる
+        \item キューが考慮される場合, コールバックインスタンスは, エグゼキュータに登録された順序で検査される
+        \item 全体として, 各コールバックの固有の優先度は, コールバックタイプ・登録順序によって決定される
+    \end{itemize}
+\end{frame}
 
-% \begin{frame}{}
-%     \begin{itemize}
-%         \item 第 2 に, より一般的なレディリストではなく, レディセットに依存する
-%         \item これは, タイマ以外のコールバックのインスタンスがいくつ用意されているかをアルゴリズムが認識できないことを意味する
-%         \item したがって, 処理ウィンドウごとに任意のコールバックのインスタンスを最大 1 つ処理する
-%         \item これにより, 上記の優先度の逆転が悪化する
-%         \item バックログされたコールバックは, スケジューリングが考慮されるまで複数の処理ウィンドウを待機する必要がある場合があるためである
-%         \item 事実上, これは非タイマコールバックインスタンスが同じ優先度の低いコールバックの複数のインスタンスによってブロックされる可能性があることを意味する
-%     \end{itemize}
-% \end{frame}
+\begin{frame}{}
+    \begin{itemize}
+        \item 通常の固定優先度スケジューリングと比較すると, このアルゴリズムにはいくつかの変わった特性がある
+        \item まず, 処理ウィンドウ中に到着したメッセージは, 残りの全てのコールバックに依存する次のポーリングポイントまで考慮されない
+        \item これは, 優先度の低いコールバックが現在の処理ウィンドウを引き延ばすことによって, 優先度の高いコールバックを暗黙的にブロックする可能性があるため, 優先度の逆転につながります
+    \end{itemize}
+\end{frame}
+
+\begin{frame}{}
+    \begin{itemize}
+        \item 第 2 に, より一般的なレディリストではなく, レディセットに依存する
+        \item これは, タイマ以外のコールバックのインスタンスがいくつ用意されているかをアルゴリズムが認識できないことを意味する
+        \item したがって, 処理ウィンドウごとに任意のコールバックのインスタンスを最大 1 つ処理する
+        \item これにより, 上記の優先度の逆転が悪化する
+        \item バックログされたコールバックは, スケジューリングが考慮されるまで複数の処理ウィンドウを待機する必要がある場合があるためである
+        \item 事実上, これは非タイマコールバックインスタンスが同じ優先度の低いコールバックの複数のインスタンスによってブロックされる可能性があることを意味する
+    \end{itemize}
+\end{frame}
