--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/abstract.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/abstract.tex
@@ -1,10 +1,9 @@
 % !TeX root = main.tex
 
-\begin{frame}{Abstract}
+\begin{frame}{提案の概要}
     \begin{itemize}
         \item ROS 2 のマルチスレッドエグゼキュータにおけるリアルタイムスケジューリングと分析を説明する
         \item マルチスレッドエグゼキュータ上で実行されるチェーンの応答時間分析手法を開発する
         \item マルチスレッドエグゼキュータにシステムを展開する際にチェーンの応答時間が長くなるリスクを特定する
-        \item ランダムに生成されたワークロードと ROS 2 プラットフォームのケーススタディを使用して実験を行い, 結果を評価して実証する
     \end{itemize}
 \end{frame}
