--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/responce_time_analysis.tex
@@ -4,6 +4,13 @@
 \section{RESPONSE TIME ANALYSIS}
 \label{sec: responce_time_analysis}
 
+\begin{frame}{}
+    \begin{itemize}
+        \item 本資料では, 分析方法のみを示す
+        \item 証明は論文を参照
+    \end{itemize}
+\end{frame}
+
 \begin{frame}{表記法}
     \begin{itemize}
         \item 明示的に指定されていない限り, インデックスを削除し, $J$ を使用して分析対象のチェーンを示す
