--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_bound.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/the_second_bound.tex
@@ -286,7 +286,7 @@
     }{alg2_ex.jpg}
 \end{frame}
 
-\begin{frame}[label=theorem2]{Theorem 2}
+\begin{frame}[label=theorem2]{チェーンの最悪応答時間}
     \begin{theorem}[]
         \begin{itemize}
             \item $L+e_{|\mathcal{C}|} \leq D$ の場合, $R(J)$ の上界は $L+e_{|\mathcal{C}|}$ である
@@ -300,8 +300,10 @@
     \end{theorem}
 \end{frame}
 
-\begin{frame}[label=theorem3]{Theorem 3}
-    \begin{theorem}[]
-        $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ が \hlink{theorem1}{Theorem 1} または \hlink{theorem2}{Theorem 2} によって取得される場合, $\Gamma$ はスケジュール可能である
-    \end{theorem}
-\end{frame}
+\forme{
+    \begin{frame}[label=theorem3]{Theorem 3}
+        \begin{theorem}[]
+            $L+e_{|\mathcal{C}|} \leq D$ が $\mathcal{C} \in \Gamma$ のチェーンごとに成立し, $L$ が \hlink{theorem1}{Theorem 1} または \hlink{theorem2}{Theorem 2} によって取得される場合, $\Gamma$ はスケジュール可能である
+        \end{theorem}
+    \end{frame}
+}
