--- a/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
+++ b/paper/2022_RTSS_Real-Time_Scheduling_and_Analysis_of_Processing_Chains_on_Multi-threaded_Executor_in_ROS2/main.tex
@@ -6,6 +6,11 @@
 \input{\beamerDir/setting.tex}
 
 
+%%%%% Mode %%%%%
+% \newcommand{\forme}[1]{#1}
+\newcommand{\forme}[1]{}
+
+
 %%%%% Front Cover %%%%%
 \title{Real-Time Scheduling and Analysis of Processing Chains on Multi-threaded エグゼキュータ in ROS 2}
 \subtitle{2022 RTSS}
@@ -20,30 +25,31 @@
 
 \maketitle
 
-\summary
-\input{abstract.tex}
+% \summary{2.5}{0}
+% \input{abstract.tex}
 
-% \begin{frame}{Outline}
-%     \setbeamertemplate{section in toc}[sections numbered]
-%     \scriptsize\tableofcontents[hideallsubsections]
-% \end{frame}
+\begin{frame}{Outline}
+    \setbeamertemplate{section in toc}[sections numbered]
+    \scriptsize\tableofcontents[hideallsubsections]
+\end{frame}
 
-\input{introduction.tex}
-\input{background.tex}
+% \input{introduction.tex}
+% \input{background.tex}
 % \input{system_model.tex}
-% \input{responce_time_analysis.tex}
-% \input{the_second_boud.tex}
+\input{symbols_terms.tex}
+\input{responce_time_analysis.tex}
+\input{the_second_bound.tex}
 % \input{experiments.tex}
 % \input{related_work.tex}
 % \input{conclusion_future_work.tex}
 
 \lastpage
 
-\section*{Reference}
-\begin{frame}[allowframebreaks]{Reference}
-    \beamertemplatetextbibitems
-    \bibliographystyle{unsrt}
-    \bibliography{\beamerDir/bibtex/master_reference}
-\end{frame}
+% \section*{Reference}
+% \begin{frame}[allowframebreaks]{Reference}
+%     \beamertemplatetextbibitems
+%     \bibliographystyle{unsrt}
+%     \bibliography{\beamerDir/bibtex/master_reference}
+% \end{frame}
 
 \end{document}
